--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Thumbs.db
 #Ignore files build by Visual Studio
 target/
+.idea/
 *.obj
 *.exe
 *.pdb
@@ -22,3 +23,4 @@ target/
 *.dll
 *.lib
 *.sbr
+
